--- a/cf-depend-on/ec2-with-dependson.yaml
+++ b/cf-depend-on/ec2-with-dependson.yaml
@@ -1,24 +1,30 @@
 AWSTemplateFormatVersion: 2010-09-09
 Parameters: 
-  ServerSgDescription:
-    Description: Server Security Group Description
-    Type: String
+  SSHKey:
+    Type:  AWS::EC2::KeyPair::KeyName
+    Description: Name of an existing EC2 KeyPair to enable SSH Access to the instance 
 
 Resources: 
-  EC2WithParameterizedSg:
+  EC2AppServer:
     Type: AWS::EC2::Instance
     Properties:
-      AvailabilityZone: us-east-2a
       ImageId: ami-0a0ad6b70e61be944
       InstanceType: t2.micro
+      KeyName: !Ref SSHKey
       SecurityGroups:
         - !Ref SSHSecurityGroup
         - !Ref ServerSecurityGroup
-
-  ServerEIP:
-    Type: AWS::EC2::EIP
+    
+  EC2DbServer:
+    Type: AWS::EC2::Instance
     Properties:
-      InstanceId: !Ref EC2WithParameterizedSg
+      ImageId: ami-0a0ad6b70e61be944
+      InstanceType: t2.micro
+      KeyName: !Ref SSHKey
+      SecurityGroups:
+        - !Ref SSHSecurityGroup
+        - !Ref PostgresSecurityGroup
+      
 
   SSHSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -38,4 +44,14 @@ Resources:
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
+          CidrIp: 0.0.0.0/0
+
+  PostgresSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Proeprties:
+      GroupDescription: Provides Public Access to Postgres Server
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 5432
+          ToPort: 5432
           CidrIp: 0.0.0.0/0
